--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../NewZealand/src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
     <title>Turismo New Zealand</title>
   </head>
-  <body>
+  <body class="bg-gray-300">
     <div id="root"></div>
     <script type="module" src="../NewZealand/src/main.tsx"></script>
   </body>
