--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body class="bg-gray-300">
     <div id="root"></div>
-    <script type="module" src="../NewZealand/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
